Fixed button groups for inputs, removed incorrect whitespace properties

--- a/marketing/sass/presentation.scss
+++ b/marketing/sass/presentation.scss
@@ -55,10 +55,10 @@ header#homepage .button:hover { background: #006582; }
   .pic#homepageImgAdvanced { background-image: url('../images/homepageImgAdvanced-retina.png?1340846519'); } }
 #github { background: #3f3f3f; padding: 20px 30px 0; }
 #github h4 { color: #fff; }
-#github span, #github #github a { color: #fff; font-size: 12px; font-size: 1.2rem; display: block; word-wrap: break-word; line-height: 1.3; margin-bottom: 3px; }
+#github span, #github #github a { color: #fff; font-size: 12px; font-size: 1.2rem; display: block; white-space: break-word; line-height: 1.3; margin-bottom: 3px; }
 #github span { font-weight: bold; }
 #github span.date { text-transform: uppercase; color: #d8f7fd; }
-#github a.commit { font-weight: bold; font-size: 12px; font-size: 1.2rem; word-break: break-word; word-wrap: break-word; }
+#github a.commit { font-weight: bold; font-size: 12px; font-size: 1.2rem; word-break: break-word; white-space: break-word; }
 #github a.button { margin: 22px 0 44px; color: #3f3f3f; border: none; background: #fff; }
 #github a.button:hover { background: #eee; }
 #github img { display: block; }
