--- a/stylesheets/foundation/buttons.scss
+++ b/stylesheets/foundation/buttons.scss
@@ -148,15 +148,15 @@
     }
 
     &.radius {
-      li:first-child a.button, li:first-child a.button.radius, li:first-child a.button.rounded { @include border-radius(0px); border-top-left-radius: $buttonRadius; border-bottom-left-radius: $buttonRadius; }
-      li + li a.button, li + li a.button.radius, li + li a.button.rounded { border-radius: 0; }
-      li:last-child a.button, li:last-child a.button.radius, li:last-child a.button.rounded { @include border-radius(0px); border-top-right-radius: $buttonRadius; border-bottom-right-radius: $buttonRadius; }
+      li:first-child .button, li:first-child .button.radius, li:first-child .button.rounded { @include border-radius(0px); border-top-left-radius: $buttonRadius; border-bottom-left-radius: $buttonRadius; }
+      li + li .button, li + li .button.radius, li + li .button.rounded { border-radius: 0; }
+      li:last-child .button, li:last-child .button.radius, li:last-child .button.rounded { @include border-radius(0px); border-top-right-radius: $buttonRadius; border-bottom-right-radius: $buttonRadius; }
     }
 
     &.rounded {
-      li:first-child a.button, li:first-child a.button.radius, li:first-child a.button.rounded { @include border-radius(0px); border-top-left-radius: 1000px; border-bottom-left-radius: 1000px; }
-      li + li a.button, li + li a.button.radius, li + li a.button.rounded { border-radius: 0; }
-      li:last-child a.button, li:last-child a.button.radius, li:last-child a.button.rounded { @include border-radius(0px); border-top-right-radius: 1000px; border-bottom-right-radius: 1000px; }
+      li:first-child .button, li:first-child .button.radius, li:first-child .button.rounded { @include border-radius(0px); border-top-left-radius: 1000px; border-bottom-left-radius: 1000px; }
+      li + li .button, li + li .button.radius, li + li .button.rounded { border-radius: 0; }
+      li:last-child .button, li:last-child .button.radius, li:last-child .button.rounded { @include border-radius(0px); border-top-right-radius: 1000px; border-bottom-right-radius: 1000px; }
     }
 
     &.even {
@@ -166,6 +166,18 @@
       &.three-up li:first-child { width: 33.4%; }
       &.four-up li { width: 25%; }
       &.five-up li { width: 20%; }
+    }
+  }
+  
+  @media only screen and (max-width: $screenSmall - 1) {    
+    .button-group {
+      button.button, input[type="submit"].button { width: auto; padding: $btnBase ($btnBase * 2) ($btnBase + 1);
+        &.large     { padding: ($largeBtnBase) ($largeBtnBase * 2) ($largeBtnBase + 1); }
+        &.medium    { padding: $btnBase ($btnBase * 2) ($btnBase + 1); }
+        &.small     { padding: ($smallBtnBase) ($smallBtnBase * 2) ($smallBtnBase + 1); }
+        &.tiny      { padding: ($tinyBtnBase) ($tinyBtnBase * 2) ($tinyBtnBase + 1); }
+      }
+      &.even button.button, &.even input[type="submit"].button { width: 100%; padding-left: 0; padding-right: 0; }
     }
   }
 
